--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@
 .MainPage {
     width: 100%;
     height: 100vh;
-    background: url(../img/5.png) center;
+    background: url(./5.png) center;
     background-size: cover;
     position: relative;
     margin: auto;
@@ -632,7 +632,7 @@ i {
 .OurResults {
     width: 100%;
     height: 55vh;
-    background-image: url(../img/Monster2..jpeg);
+    background-image: url(./Monster2..jpeg);
     background-position: 40% 65%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -795,7 +795,7 @@ i {
     height: 70vh;
     overflow: hidden;
     margin-top: 300px;
-    background-image: url(../img/Monster3.jpeg);
+    background-image: url(./Monster3.jpeg);
     background-position: 50% 75%;
     background-repeat: no-repeat;
     background-size: cover;
